----------------------------
bzr-fastimport Release Notes
----------------------------

.. contents::

IN DEVELOPMENT
--------------

  FEATURES:

  IMPROVEMENTS:

  BUG FIXES:

    * hg-fast-export should use binary mode on Windows.
      (Alexey Stukalov)

  COMPATIBILITY BREAKS:

  API BREAKS:

  TESTING:

  INTERNALS:


0.6 23-Jul-2008
---------------

  FEATURES:

  IMPROVEMENTS:

    * Added NEWS containing Release Notes. (Ian Clatworthy)

    * ``bzr help fastimport`` now provides help that is useful.
      (Ian Clatworthy)

    * Numerous fixes to ``bzr-fast-export.py`` to improve round-tripping
      with Git. Added ``--import-marks`` and ``--export-marks`` options
      to ``fast-import`` as well.
      (Pieter de Bie)

    * ``svn-fast-export.py`` now supports a regular-expression to specify
      the branches to export.
      (Mirko Friedenhagen)

  BUG FIXES:

    * Support the new Repository API added in bzr.dev r3510. The old API
      will be used for earlier versions of bzr including bzr 1.6beta2 and
      earlier. (Ian Clatworthy)

  COMPATIBILITY BREAKS:

    * The ``--inv-fulltext`` option is not yet supported when the new
      Repository API is used to import revisions. The option can be
      provided but it will be ignored. (Ian Clatworthy)

  API BREAKS:

    * The ``RevisionLoader`` class has been renamed to ``RevisionLoader1``.
      The ``ExperimentalRevisionLoader`` class has been renamed to
      ``ImportRevisionLoader1``. New classes called ``RevisionLoader2``
      and ``ImportRevisionLoader2`` are provided that use the new
      Repository API. (Ian Clatworthy)

  TESTING:

  INTERNALS:

    * Improved packaging by adding a setup.py file. (Ian Clatworthy)


0.5 02-Jun-2008
---------------

  FEATURES:

    * Version suitable for Bazaar 1.5.
      (Ian Clatworthy)